2003-05-26  John Levon  <levon@movementarian.org>

	* libop/op_interface_25.h: add LAST_CODE

	* daemon/opd_stats.h:
	* daemon/opd_stats.c: count short reads of
	buffer and unplacable samples

	* daemon/opd_image.c: rewrite buffer parsing
	code, handle window where we can't place a
	sample

2003-05-26  John Levon  <levon@movementarian.org>

	* libutil++/utility.h: fix typo

	* utils/opcontrol: fix typo

2003-05-25  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386.piii.unit_masks: tweak comment, change default unit mask
	  for kni instruction to 0 and type to exclusive

2003-05-24  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Doxyfile:
	* libpp/profile.h:
	* libpp/profile_container.h:
	* libutil++/utility.h: remove gcc 2.91 noncopyable as empty base class
	 work-around

2003-05-23  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: do early check of libiberty

2003-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_read.h: minor #include fix

2003-05-21  Philippe Elie  <phil.el@wanadoo.fr>

	* */Makefile.am:
	* configure.in: handle our own OP_CFLAGS, OP_CXXFLAGS to let user
	  free to use make CFLAGS=

2003-05-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/mangled-name.txt:
	* libregex/stl.pat.in: partial handling of _Identity<> and
	  _Select1st<>, pattern fail if type are too complex

2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: add list<T>::{const_}+iterator

2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: better handling of zero sample file size when
	  opening in read only mode

	* module/x86/op_nmi.c: printk format fix

2003-05-16  John Levon  <levon@movementarian.org>

	* pp/counter_profile.cpp: remove bogus cpu speed
	consistency check

2003-05-09  John Levon  <levon@movementarian.org>

	* m4/Makefile.am:
	* m4/compileroption.m4: add a generalised compiler option
	tester

	* configure.in: use it, add -fno-common

2003-05-09  John Levon  <levon@movementarian.org>
