@@ -50,6 +50,7 @@ Before 1.0 little stuff
  o must we do setrlimit(RLIMIT_NOFILE, ...) for daemon ? Isn't already limited
   by the kernel itself ?
  o allow --ctr0-event to take event numbers. (is it worth ?)
+ o when we dump stats for oprofiled, dump kernel-side values too (for 2.5)
 
 Documentation
 -------------
